# pdf-reader

./: .gitignore  README.md  pyproject.toml
app/: dependencies.py  main.py  settings.py
app/crud/: file_save.py
app/models/: file_request.py  file_save.py  staff.py
app/routers/: files.py  read_pdf.py
app/schema/: data_table.py  file_request.py
app/services/: pdf_services.py  save_file_services.py
app/utils/database/: database.py
