[project]
name = "pdf-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.17",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "num2words>=0.5.14",
    "pdfplumber>=0.11.6",
]
